Fixed h1 spacing, meals.html text, added back buttons for meals.html and shopping.html

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -40,7 +40,7 @@
   /* Header/main top area styling */
   .header {
     text-align: center;
-    padding: 60px 20px 1px; /* Reduced the bottom padding */
+    padding: 60px 20px 0.5px; /* Reduced the bottom padding */
   }
   
   .header h1 {
